overflow fixed

--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -2,7 +2,6 @@
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
-    position: relative;
     overflow-y: hidden;
 }
 
